# tableTopVaultServer2

./: .gitignore  CMakeLists.txt  commands.txt  daemon.conf  gui.conf  tsconfig.json  vault_daemon.cpp  vault_gui.cpp  vault_requests.cpp
nginx/: .gitignore  nginx.conf
src/: index.ts
